--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.13",
-    "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -19,8 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "buildTailPost": "postcss css/tailwind.css -o src/css/style.css",
-    "buildTail": "npx tailwindcss-cli -i css/tailwind.css -o src/css/style.css"
+    "buildTailPost": "postcss css/main.css -o src/css/style.css && npm run start",
+    "buildTail": "npx tailwindcss-cli -i css/main.css -o src/css/style.css --wach"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +36,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-children": "^2.1.0"
   }
 }
